--- a/juanfrans/_config.yml
+++ b/juanfrans/_config.yml
@@ -1,7 +1,7 @@
 
 
 # Site settings
-title: Juanfrans
+title: Juan Francisco Saldarriaga
 email: juanfrans@gmail.com
 github: https://github.com/juanfrans
 twitter: https://twitter.com/juanfrans
